add position roles
