# backend/config/routes.rb
@@ -5,6 +5,7 @@ Rails.application.routes.draw do
     namespace :v1 do
       resources :countries, only: %i[index show], param: :number
       resources :players
+      resources :position_roles, only: %i[index show]
       resources :positions, only: %i[index show]
       resources :teams
       resources :leagues
